- Add DD (destructive) support to all weapons on all sheets (was only on vehicle and ship weapons) - Freight lot sizes incorrectly implemented, fixed - Add the Psi Stat to the NPC sheet Done, straight copy'n'paste but visibility controlled by checkbox - Adding optional wounding rules from Traveller Companion New config checkbox that shows a textbox under main stats - Under the Ship Sheet added Mortgage, Life Support, Salaries and Full Tank Fuel costs - Parse UWPs in the form UWP: B 5 4 6 8 4 9 – 9 to allow easier copy paste from TravellerMap - Mark GitHub Bug: Mongoose Traveller 2e: Bug in Roll for Psionic power #10094 as complete To do on release - Added restyled roll templates from Pat, config checkbox added to control this, also tested in dark mode!

--- a/Mongoose_Traveller2e/MongooseTraveller.css
+++ b/Mongoose_Traveller2e/MongooseTraveller.css
@@ -1093,23 +1093,6 @@ input.sheet-power[type="checkbox"]:checked + span::before {
     margin: 3px;
 }
 
-/*
-.sheet-rolltemplate-skill-general .sheet-no_border .inlinerollresult,
-.sheet-rolltemplate-skill-attrib .sheet-no_border .inlinerollresult,
-.sheet-rolltemplate-range .sheet-no_border .inlinerollresult,
-.sheet-rolltemplate-melee .sheet-no_border .inlinerollresult,
-.sheet-rolltemplate-power .sheet-no_border .inlinerollresult,
-.sheet-rolltemplate-passengers .sheet-no_border .inlinerollresult
-.sheet-rolltemplate-freight .sheet-no_border .inlinerollresult {
-    display: inline-block;
-    min-width: 1.5em;
-    border: 2px solid transparent;
-    background: transparent;
-    font-weight: 400;
-    text-shadow: none;
-}
-*/
-
 /* ----- Attrib ----- */
 .sheet-rolltemplate-skill-attrib.sheet-rolltemplate-darkmode .inlinerollresult {
     color: #e5e5e5;
@@ -1213,6 +1196,74 @@ input.sheet-power[type="checkbox"]:checked + span::before {
     border-spacing: 0;
     background: #34495E;
 }
+
+/* ----- Alt Rolltemplates ----- */
+.sheet-rolltemplate-skill-attrib-alt.sheet-rolltemplate-darkmode .inlinerollresult,
+.sheet-rolltemplate-power-alt.sheet-rolltemplate-darkmode .inlinerollresult,
+.sheet-rolltemplate-range-alt.sheet-rolltemplate-darkmode .inlinerollresult,
+.sheet-rolltemplate-skill-general-alt.sheet-rolltemplate-darkmode .inlinerollresult,
+.sheet-rolltemplate-trade-broker-alt.sheet-rolltemplate-darkmode .inlinerollresult {
+    color: #e5e5e5;
+}
+
+.sheet-rolltemplate-alt table {
+    width: 90%;
+    background: Gainsboro;
+    border: 3px ridge #71797E;
+    color: black;
+    font-size: 1.2em;
+    font-family: "Contrail One", sans-serif;
+}
+
+.sheet-rolltemplate-alt th {
+    color: crimson;
+    padding: 4px;
+    line-height: 1.2em;
+    font-size: 1.2em;
+    width: 100%;
+    height: 100%;
+    border-spacing: 0;
+    /* background: #DE300B; */
+    background-image: linear-gradient(gray, #000000, gray);
+}
+
+.sheet-rolltemplate-alt td {
+    padding: 0px;
+    padding-top: 5px;
+    text-shadow: none;
+    font-weight: bold;
+    font-size: 1.2em;
+    font-style: italic;
+    text-align: center;
+}
+
+.sheet-rolltemplate-alt-combat  {
+    color: red;
+ }
+
+.sheet-rolltemplate-alt-skill  {
+    color: green;
+ }
+
+.sheet-rolltemplate-alt-skill-general  {
+    color: purple;
+ }
+
+.sheet-rolltemplate-alt-power  {
+    color: blue;
+ }
+
+.sheet-rolltemplate-alt .inlinerollresult {
+    display: inline-block;
+    min-width: 1.2em;
+    text-align: center;
+    border: 1px solid #596a72;
+    background: transparent;
+    text-shadow: none;
+    padding: 3px;
+    margin: 3px;
+}
+
 
 /* ----- Tabs ----- */
 
@@ -2251,6 +2302,33 @@ input.sheet-laf-ship-component-hider {
     grid-template-columns: 0.97fr 0.1fr 0.35fr 0.1fr 0.35fr 0.1fr 0.35fr 0.1fr 0.35fr 0.1fr 0.35fr 0.1fr 0.35fr 2fr;
 }
 
+.sheet-rollmod {
+    width: 100px !important;
+}
+
+.sheet-wounds {
+margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    width: 97%;
+}
+
+.sheet-wounds span {
+    margin-top: 3px;
+}
+
+input.sheet-wounding-boolean:not([value='1']) ~ div .sheet-wounds {
+  display: none;
+}
+
+input.sheet-npc-powers-boolean:not([value='1']) ~ div .sheet-npc-powers {
+  display: none;
+}
+
+input.sheet-legacy-freight-boolean:not([value='1']) ~ div .sheet-legacy-freight {
+  display: none;
+}
 
 /*
  * Charmancer stuff
@@ -2370,4 +2448,5 @@ span.sheet-charmancer_actions-panel {
   flex-flow: row wrap;
   justify-content: flex-end;
 }
+
 
